tests/NormalTests/paczka1/fuzzy1/36797793.err
Error in line 18: au2kO S638 76,8
Error in line 23: etJ5mw A414 95,3
Error in line 22: 8KGmviP9xUw S645 19,1
Error in line 27: etJ5mw A81 140,72
Error in line 24: etJ5mw A81 44,5
Error in line 33: etJ5mw S638 97,6
